exceptions and raising in python 2vs3

--- a/Beginner_3/9. Exception Handling.ipynb
+++ b/Beginner_3/9. Exception Handling.ipynb
@@ -30,7 +30,11 @@
    "source": [
     "## 9.2 Except\n",
     "\n",
-    "The `except` clause allows you to specify exception handlers. Followed by an Exception class, it allows you to catch specific exceptions and control how each is handled. The exception class can be aliased using the `as` keyword followed by a variable for storage and use in the next block of statements.\n",
+    "The `except` clause allows you to specify exception handlers. Followed by an Exception class, it allows you to catch specific exceptions and control how each is handled.\n",
+    "\n",
+    "- In Python 3.x, the exception class is aliased using the `as` keyword followed by a variable for storage and use in the next block of statements\n",
+    "\n",
+    "- In Python 2.x, the exception class is separated from the variable by a comma\n",
     "\n",
     "### 9.2.1 [Exception Classes](https://docs.python.org/3.5/library/exceptions.html#bltin-exceptions)\n",
     "\n",
@@ -43,7 +47,11 @@
    "source": [
     "### 9.2.2 Raising Exceptions\n",
     "\n",
-    "When errors occur, a `raise` statement can be used to halt the execution of the script. `raise` statements are followed by Exception classes. Exceptions can accept an argument that is displayed when the exception occurs. Usually, this is the aliased exception for feedback."
+    "When errors occur, a `raise` statement can be used to halt the execution of the script. `raise` statements are followed by Exception classes. Exceptions can accept an argument that is displayed when the exception occurs. This is the new-style of raising an error. The old-style was writing the exception followed by the argument, separated by a comma.\n",
+    "\n",
+    "- In Python 3.x, only accepts the new-style of writing exceptions\n",
+    "\n",
+    "- In Python 2.x, it is possible to write exceptions using old and new styles"
    ]
   },
   {
@@ -61,9 +69,40 @@
     "while True:\n",
     "    try:\n",
     "        x = int(input(\"Please enter a number: \"))\n",
-    "    except ValueError as e:\n",
-    "        raise NotANumberException(e)\n",
-    "        # raise NotANumberException(\"Not following directions\")\n",
+    "    except ValueError as e:  # exceptions in Python 3.x are aliased\n",
+    "        raise NotANumberException(e)  # only new-style works\n",
+    "        # raise NotANumberException(\"A number was not entered.\")\n",
+    "    else:\n",
+    "        break\n",
+    "    finally:\n",
+    "        print(\"Done...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Python 2.x, it was also possible to `raise` an exception like below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class NotANumberException(Exception):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "while True:\n",
+    "    try:\n",
+    "        x = int(input(\"Please enter a number: \"))\n",
+    "    except ValueError, e:  # exceptions in Python 2.x separated by comma\n",
+    "        raise NotANumberException, e  # both old and new styles work in Python 2.x\n",
+    "        # raise NotANumberException(\"A number was not entered.\")\n",
     "    else:\n",
     "        break\n",
     "    finally:\n",
