old and new style print

--- a/Beginner_2/5. Built-in Functions.ipynb
+++ b/Beginner_2/5. Built-in Functions.ipynb
@@ -140,7 +140,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
+    "The old-style __`print`__ worked also as a statement. Both old and new-style `print` work in Python 2.x."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# These both work in Python 2.x\n",
+    "print \"Hello World\"\n",
+    "print(\"Hello World\")"
    ]
   },
   {
