--- a/Beginner_2/5. Built-in Functions.ipynb
+++ b/Beginner_2/5. Built-in Functions.ipynb
@@ -38,6 +38,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "All inputs in Python 3.x are stored as __`str`__ objects.\n",
+    "\n",
+    "In Python 2.x, there were two input functions, `input()` and `raw_input()`. It was Python 2.x's `raw_input()` that functioned similarly to Python 3.x's `input()`.\n",
+    "\n",
+    "Run the code below in Python 2.x:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "my_input = input('Enter a number: ')\n",
+    "\n",
+    "type(my_input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Python 2.x `input()` behavior of reading inputs in types other than strings was considered dangerous and was fixed in Python 3.x."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5.2 [print()](https://docs.python.org/3.5/library/functions.html#print)\n",
     "\n",
     "If you want your program to display something, you can give explicit instructions with the __`print()`__ function. \n",
@@ -140,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The old-style __`print`__ worked also as a statement. Both old and new-style `print` work in Python 2.x."
+    "In Python 2.x, the old __`print`__ also worked as a statement. Both old and new `print` work in Python 2.x but only the `print()` function works in Python 3.x."
    ]
   },
   {
