refer to python 3 as 3.x

--- a/Beginner_1/4. Operators and Delimiters.ipynb
+++ b/Beginner_1/4. Operators and Delimiters.ipynb
@@ -881,7 +881,7 @@
    "source": [
     "### `<>`\n",
     "\n",
-    "If values of two operands are not equal, then condition becomes true. This is similar to the __!=__ operator but is then deprecated in Python 3."
+    "If values of two operands are not equal, then condition becomes true. This is similar to the __!=__ operator but is then deprecated in Python 3.x."
    ]
   },
   {
