dicts in python 2vs3

--- a/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
+++ b/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
@@ -82,7 +82,7 @@
     "    'Name': 'Bob'\n",
     "}\n",
     "\n",
-    "print(my_dictionary['Name'])"
+    "my_dictionary['Name']"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "source": [
     "my_dictionary = {'Name': 'Eric', 'Age':22}\n",
     "\n",
-    "print(my_dictionary['Name'])"
+    "my_dictionary['Name']"
    ]
   },
   {
@@ -184,11 +184,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pizza costs 50\n",
+      "Ramen costs 180\n"
+     ]
+    }
+   ],
    "source": [
     "# A dictionary of food and its prices\n",
     "food = { \n",
@@ -203,7 +212,6 @@
     "food['Burger'] = 120\n",
     "food['Ham and Cheese sandwich'] = 80\n",
     "\n",
-    "# print some food\n",
     "print(\"Pizza costs\", food['Pizza'])\n",
     "print(\"Ramen costs\", food['Ramen'])"
    ]
@@ -249,8 +257,7 @@
     "# Change the value of 'France' from 'IT' to 'FR'\n",
     "country['France'] = 'FR'\n",
     "\n",
-    "# Print the value of 'France'\n",
-    "print(country['France'])"
+    "country['France']"
    ]
   },
   {
@@ -284,11 +291,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Carbonara': 150, 'Pizza': 50, 'Ramen': 180, 'Spaghetti': 150}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "food = { \n",
     "    'Pizza': 50,\n",
@@ -302,7 +320,7 @@
     "del food['Garlic Bread']\n",
     "\n",
     "# Print 'food' dictionary\n",
-    "print(food)"
+    "food"
    ]
   },
   {
@@ -318,17 +336,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run the code to see how len() works\n",
     "\n",
     "my_dictionary = {'Name': 'Eric', 'Age':22}\n",
     "\n",
-    "print(len(my_dictionary))"
+    "len(my_dictionary)"
    ]
   },
   {
@@ -342,24 +371,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"{'Age': 22, 'Name': 'Eric'}\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run the code to see how str() works\n",
     "\n",
     "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
     "\n",
-    "print(str(my_dictionary)) # prints the equivalent string"
+    "str(my_dictionary) # prints the equivalent string"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `dict.keys()`\n",
+    "### `dict.items()` or `dict.iteritems()` in Python 2.x\n",
+    "\n",
+    "Returns list of the dictonary's key-value pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('Age', 22), ('Name', 'Eric')])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
+    "\n",
+    "dict.items(my_dictionary) or my_dictionary.items()  # my_dictionary.iteritems() in Python 2.x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `dict.keys()` or `dict.iterkeys()` in Python 2.x\n",
     "\n",
     "Returns list of the dictonary's keys."
    ]
@@ -374,14 +447,14 @@
    "source": [
     "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
     "\n",
-    "print(dict.keys(my_dictionary))"
+    "dict.keys(my_dictionary) or my_dictionary.keys()  # my_dictionary.iterkeys() in Python 2.x"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `dict.values()`\n",
+    "### `dict.values()` or `dict.itervalues()` in Python 2.x\n",
     "\n",
     "Returns a list of the dictionary's values."
    ]
@@ -396,7 +469,7 @@
    "source": [
     "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
     "\n",
-    "print(dict.values(my_dictionary))"
+    "dict.values(my_dictionary) or my_dictionary.values()  # my_dictionary.itervalues() in Python 2.x"
    ]
   }
  ],
