more about dicts in python 2vs3

--- a/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
+++ b/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -131,6 +131,48 @@
     "my_dictionary = {'Name': 'Eric', 'Age':22}\n",
     "\n",
     "my_dictionary['Name']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Python 3.x, when checking whether a key exists in a dictionary, the membership operator `in` can be used:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "if 'Name' in my_dictionary:\n",
+    "    print(my_dictionary['Name'])\n",
+    "else:\n",
+    "    print(\"No such key\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Python 2.x, to check for dictionary keys, a dictionary method `has_key()` is available:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "if my_dictionary.has_key('Name'):  # only works in Python 2.x\n",
+    "    print(my_dictionary['Name'])\n",
+    "else:\n",
+    "    print(\"No such key\")"
    ]
   },
   {
@@ -184,20 +226,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pizza costs 50\n",
-      "Ramen costs 180\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# A dictionary of food and its prices\n",
     "food = { \n",
@@ -254,7 +287,7 @@
     "    'France': 'IT'\n",
     "}\n",
     "\n",
-    "# Change the value of 'France' from 'IT' to 'FR'\n",
+    "# Change the value of 'France'\n",
     "country['France'] = 'FR'\n",
     "\n",
     "country['France']"
@@ -291,22 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Carbonara': 150, 'Pizza': 50, 'Ramen': 180, 'Spaghetti': 150}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "food = { \n",
     "    'Pizza': 50,\n",
@@ -316,10 +338,9 @@
     "    'Carbonara': 150\n",
     "}\n",
     "\n",
-    "# Delete the key 'Garlic Bread' along with its value which is 40\n",
+    "# Delete the key 'Garlic Bread' along with its value\n",
     "del food['Garlic Bread']\n",
     "\n",
-    "# Print 'food' dictionary\n",
     "food"
    ]
   },
@@ -329,29 +350,18 @@
    "source": [
     "## 6.6.5 Other methods\n",
     "\n",
-    "### `len( )`\n",
+    "### `len()`\n",
     "\n",
     "The length of a dictionary is the number of key-value pairs it has. Each pair counts only __once__, even if the value is a list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the code to see how len() works\n",
     "\n",
@@ -364,29 +374,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `str( )`\n",
+    "### `str()`\n",
     "\n",
     "Produces a printable string representation of a dictionary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"{'Age': 22, 'Name': 'Eric'}\""
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the code to see how str() works\n",
     "\n",
@@ -406,22 +405,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_items([('Age', 22), ('Name', 'Eric')])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_dictionary = {'Name': 'Eric', 'Age': 22}\n",
     "\n",
