set and dict comprehensions not available in python 2

--- a/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
+++ b/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
@@ -333,6 +333,13 @@
     "[i for i in range(5)]\n",
     "i"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set and dictionary comprehensions are also not available in Python 2.x"
+   ]
   }
  ],
  "metadata": {
