--- a/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
+++ b/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
@@ -338,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set and dictionary comprehensions are also not available in Python 2.x"
+    "Set and dictionary comprehensions were not available in Python 2.x"
    ]
   }
  ],
