fixed division, added note on comparisons

--- a/Beginner_1/4. Operators and Delimiters.ipynb
+++ b/Beginner_1/4. Operators and Delimiters.ipynb
@@ -84,39 +84,33 @@
     "\n",
     "Divides left hand operand by right hand operand.\n",
     "\n",
-    "The `x / y` expression performs __\"true division\"__ in __3.X__, and __\"classic division\"__ in __2.X__"
+    "The `x / y` expression performs __\"true division\"__ in Python 3.x, and __\"classic division\"__ in Python 2.x."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Python 3.X\n",
+    "print(3/2) # will print 1.5\n",
+    "print(3/2.0) # will print 1.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Python 2.X\n",
     "print 3/2 # will print 1\n",
-    "\n",
-    "\n",
-    "# Python 3.X\n",
-    "print(3/2) # will print 1.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Python 2.X\n",
-    "print 3/2.0 # will print 1.5\n",
-    "\n",
-    "\n",
-    "# Python 3.X\n",
-    "print(3/2.0) # will print 1.5"
+    "print 3/2.0 # will print 1.5"
    ]
   },
   {
@@ -127,7 +121,20 @@
     "\n",
     "Also known as the ___integer division___. The division of operands will result to a quotient in which the digits after the decimal point are __removed__.\n",
     "\n",
-    "In both Python __3.X__ and __2.X__, the `x // y` floor division expression always truncates fractional remainders."
+    "In both Python 3.x and Python 2.x, the `x // y` floor division expression __always truncates__ fractional remainders."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Python 3.X\n",
+    "print(3//2) # will print 1\n",
+    "print(3//2.0) # will print 1.0"
    ]
   },
   {
@@ -140,26 +147,7 @@
    "source": [
     "# Python 2.X\n",
     "print 3//2 # will print 1\n",
-    "\n",
-    "\n",
-    "# Python 3.X\n",
-    "print(3//2) # will print 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Python 2.X\n",
-    "print 3//2.0 # will print 1.0\n",
-    "\n",
-    "\n",
-    "# Python 3.X\n",
-    "print(3//2.0) # will print 1.0"
+    "print 3//2.0 # will print 1.0"
    ]
   },
   {
@@ -862,7 +850,9 @@
    "source": [
     "## 4.1.6 Comparison Operators\n",
     "\n",
-    "> _\"These operators compare the values on either sides of them and decide the relation among them. They are also called Relational operators.\"_"
+    "> _\"These operators compare the values on either sides of them and decide the relation among them. They are also called Relational operators.\"_\n",
+    "\n",
+    "In Python 3.x, comparisons are strict and will work only for compatible types. Otherwise, a `TypeError` is raised."
    ]
   },
   {
@@ -884,8 +874,7 @@
     "a = 2\n",
     "b = 2\n",
     "\n",
-    "\n",
-    "print(a == b)"
+    "print(a == b"
    ]
   },
   {
