changed references to Python 2.x and Python 3.x

--- a/Beginner_1/4. Operators and Delimiters.ipynb
+++ b/Beginner_1/4. Operators and Delimiters.ipynb
@@ -95,7 +95,7 @@
    },
    "outputs": [],
    "source": [
-    "# Python 3.X\n",
+    "# Python 3.x\n",
     "print(3/2) # will print 1.5\n",
     "print(3/2.0) # will print 1.5"
    ]
@@ -108,7 +108,7 @@
    },
    "outputs": [],
    "source": [
-    "# Python 2.X\n",
+    "# Python 2.x\n",
     "print 3/2 # will print 1\n",
     "print 3/2.0 # will print 1.5"
    ]
@@ -132,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "# Python 3.X\n",
+    "# Python 3.x\n",
     "print(3//2) # will print 1\n",
     "print(3//2.0) # will print 1.0"
    ]
@@ -145,7 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "# Python 2.X\n",
+    "# Python 2.x\n",
     "print 3//2 # will print 1\n",
     "print 3//2.0 # will print 1.0"
    ]
@@ -720,7 +720,7 @@
     "|    `x > y`   | Strictly greater than                             |\n",
     "|   `x >= y`   | Greater than or equal to                          |\n",
     "|   `x == y`   | Equal to (Same Value)                             |\n",
-    "|   `x != y`   | Not equal to (same as `x <> y` in Python 2.X only |\n",
+    "|   `x != y`   | Not equal to (same as `x <> y` in Python 2.x only |\n",
     "|   `x is y`   | Same object                                       |\n",
     "| `x is not y` | Negated object identity                           |\n",
     "|  `x < y < z` | Chained comparisons                               |\n",
@@ -930,7 +930,7 @@
    "metadata": {},
    "source": [
     "_Note_: \n",
-    "> `!=` and `<>` both mean not equal by value in Python 2.X,  but `!=` is the preferred syntax in in 2.X and the only supported option in 3.X.  "
+    "> `!=` and `<>` both mean not equal by value in Python 2.x,  but `!=` is the preferred syntax in in Python 2.x and the only supported option in Python 3.x."
    ]
   },
   {
