--- a/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
+++ b/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
@@ -8,8 +8,8 @@
     "\n",
     "Strings store characters and have many built-in convenience methods that let you modify their content. Strings are immutable, meaning they cannot be changed in place.\n",
     "\n",
-    "### Strings in Python 2 vs. Strings in Python 3\n",
-    "Python 2 and 3 both have two types of strings:\n",
+    "### Strings in Python 2.x vs. Strings in Python 3.x\n",
+    "Python 2.x and 3.x both have two types of strings:\n",
     "\n",
     "\n",
     "> - __byte sequences__, which have to be __literal characters__ from the __ASCII alphabet__. \n",
@@ -19,14 +19,14 @@
     "In Unicode, you can include other languages, and with the right encoding, emoji. \n",
     "\n",
     "\n",
-    "__Python 2__ :\n",
-    ">You had to mark every single Unicode string with a u at the beginning, like __`u'Hello'`__. You have to use Unicode strinfs all the time! (If you forget the __`u`__, you will have a byte sequence instead.\n",
+    "__Python 2.x__ :\n",
+    ">You had to mark every single Unicode string with a u at the beginning, like __`u'Hello'`__. You have to use Unicode strings all the time! (If you forget the __`u`__, you will have a byte sequence instead.\n",
     "\n",
     "\n",
-    "__Python 3__ :  \n",
-    ">All strings are now Unicode by default and you have to mark byte sequences with __`b`__. Using Unicode is a much more common scenario so it has reduced development time for everyone that does Python 3.\n",
+    "__Python 3.x__ :  \n",
+    ">All strings are now Unicode by default and you have to mark byte sequences with __`b`__. Using Unicode is a much more common scenario so it has reduced development time for everyone that does Python 3.x.\n",
     "\n",
-    "If you have or want to support both, you can still mark strings with u in Python 3."
+    "If you have or want to support both, you can still mark strings with u in Python 3.x."
    ]
   },
   {
@@ -560,7 +560,7 @@
    "source": [
     "## Exercises\n",
     "\n",
-    "<b> (1) <b> Count all the vowels, uppercase and lowercase in this sentence and print the result:"
+    "(1) Count all the vowels, uppercase and lowercase in this sentence and print the result:"
    ]
   },
   {
@@ -575,8 +575,6 @@
     "\n",
     "# Write your code below:\n",
     "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -584,9 +582,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>(2) Convert the sentence in all uppercase letters and print the result.\n",
+    "(2) Convert the sentence in all uppercase letters and print the result.\n",
     "\n",
-    "(3) Convert the same sentence in all lowercase letters and print the result.</b>"
+    "(3) Convert the same sentence in all lowercase letters and print the result."
    ]
   },
   {
@@ -600,8 +598,6 @@
     "sentence = \"i LoVe PyThOn sO MuCh.\"\n",
     "\n",
     "#Write your code below:\n",
-    "\n",
-    "\n",
     "\n",
     "\n"
    ]
