--- a/Beginner_2/5. Built-in Functions.ipynb
+++ b/Beginner_2/5. Built-in Functions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Built-in Functions in Python 3\n",
     "\n",
-    "Listed below are most common built-in functions in Python 3:"
+    "Listed below are some of the most common built-in functions in Python 3.x:"
    ]
   },
   {
