user defined exceptions

--- a/Beginner_3/9. Exception Handling.ipynb
+++ b/Beginner_3/9. Exception Handling.ipynb
@@ -38,7 +38,21 @@
     "\n",
     "### 9.2.1 [Exception Classes](https://docs.python.org/3.5/library/exceptions.html#bltin-exceptions)\n",
     "\n",
-    "Python has built-in Exception classes that you can catch with `except`. Multiple except clauses can be used. New exceptions can even be created easily."
+    "Python has built-in Exception classes that you can catch with `except`. Multiple `except` clauses can be used in a `try` statement.\n",
+    "\n",
+    "Once you learn about `classes`, you'll learn that new exceptions can be created easily since these `Exceptions` are just classes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class NotANumberException(Exception):\n",
+    "    pass"
    ]
   },
   {
@@ -62,10 +76,6 @@
    },
    "outputs": [],
    "source": [
-    "class NotANumberException(Exception):\n",
-    "    pass\n",
-    "\n",
-    "\n",
     "while True:\n",
     "    try:\n",
     "        x = int(input(\"Please enter a number: \"))\n",
@@ -93,16 +103,11 @@
    },
    "outputs": [],
    "source": [
-    "class NotANumberException(Exception):\n",
-    "    pass\n",
-    "\n",
-    "\n",
     "while True:\n",
     "    try:\n",
     "        x = int(input(\"Please enter a number: \"))\n",
     "    except ValueError, e:  # exceptions in Python 2.x separated by comma\n",
     "        raise NotANumberException, e  # both old and new styles work in Python 2.x\n",
-    "        # raise NotANumberException(\"A number was not entered.\")\n",
     "    else:\n",
     "        break\n",
     "    finally:\n",
