--- a/Intermediate_3/18.2 Peewee.ipynb
+++ b/Intermediate_3/18.2 Peewee.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -45,13 +45,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import peewee\n",
     "\n",
-    "db = peewee.SqliteDatabase(':memory:')  # This ideally belongs in a settings.py file\n",
+    "db = peewee.SqliteDatabase('peewee.db')  # This ideally belongs in a settings.py file\n",
     "\n",
     "\n",
     "class BaseModel(peewee.Model):\n",
@@ -62,8 +62,8 @@
     "\n",
     "class User(BaseModel):\n",
     "    name = peewee.CharField()\n",
-    "    birthday = peewee.DateField()\n",
-    "    is_relative = peewee.BooleanField()"
+    "    birthday = peewee.DateField(null=True)\n",
+    "    is_relative = peewee.BooleanField(null=True)"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -91,7 +91,8 @@
     "    User,\n",
     "]\n",
     "db.connect()\n",
-    "db.create_tables(models)\n",
+    "db.create_tables([User])\n",
+    "db.commit()\n",
     "db.close()"
    ]
   },
@@ -110,7 +111,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -131,7 +132,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -152,7 +153,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -173,7 +174,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -195,11 +196,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "db = SqliteDatabase(':memory:')\n",
+    "db = peewee.SqliteDatabase(':memory:')\n",
     "\n",
     "with db.atomic() as txn:\n",
     "    User.create(name='Charlie')  # This is the outer-most level, so this block corresponds to a transaction.\n",
@@ -225,7 +226,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -281,11 +282,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "db = SqliteDatabase(':memory:', autocommit=False)\n",
+    "db = peewee.SqliteDatabase('peewee.db', autocommit=False)\n",
     "\n",
     "db.begin()\n",
     "User.create(name='Somebody')\n",
@@ -333,12 +334,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for person in Person.select():\n",
-    "    print(person.name, person.is_relative)"
+    "for user in User.select():\n",
+    "    print(user.name, user.is_relative)"
    ]
   },
   {
@@ -352,12 +353,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for person in Person.select().order_by(Person.birthday.desc()):\n",
-    "    print(person.name, person.birthday)"
+    "for user in User.select().order_by(User.birthday.desc()):\n",
+    "    print(user.name, user.birthday)"
    ]
   },
   {
@@ -380,7 +381,7 @@
     "# In your settings file\n",
     "import peewee\n",
     "\n",
-    "db = peewee.SqliteDatabase(':memory:')  # This ideally belongs in a settings.py file\n",
+    "db = peewee.SqliteDatabase('peewee.db')  # This ideally belongs in a settings.py file\n",
     "\n",
     "\n",
     "# In your models file\n",
