--- a/Intermediate_3/18.2 Peewee.ipynb
+++ b/Intermediate_3/18.2 Peewee.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "### Model Definition\n",
     "\n",
-    "When starting a project with Peewee, it’s typically best to begin with your data model, by defining one or more `Model` classes. This usually goes into the __`models.py`__ file of your application. We'll use an in-memory SQLite database:"
+    "When starting a project with Peewee, it’s typically best to begin with your data model, by defining one or more `Model` classes. This usually goes into the __`models.py`__ file of your application. We'll use SQLite:"
    ]
   },
   {
@@ -200,7 +200,7 @@
    },
    "outputs": [],
    "source": [
-    "db = peewee.SqliteDatabase(':memory:')\n",
+    "db = peewee.SqliteDatabase('peewee.db')\n",
     "\n",
     "with db.atomic() as txn:\n",
     "    User.create(name='Charlie')  # This is the outer-most level, so this block corresponds to a transaction.\n",
