remove references to memory sqlite

--- a/Intermediate_3/18.1 SQLAlchemy.ipynb
+++ b/Intermediate_3/18.1 SQLAlchemy.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "### Configuring a Database Engine\n",
     "\n",
-    "For this tutorial we will use an in-memory SQLite database. We use the __`create_engine()`__ method to create an __`Engine`__ instance, representing the core interface to the database:"
+    "For this tutorial we will use SQLite. We use the __`create_engine()`__ method to create an __`Engine`__ instance, representing the core interface to the database:"
    ]
   },
   {
@@ -95,7 +95,6 @@
    "source": [
     "from sqlalchemy import create_engine\n",
     "\n",
-    "# engine = create_engine('sqlite:///:memory:')  # This ideally belongs in a settings.py file\n",
     "engine = create_engine('sqlite:///sqlalchemy.db')  # This ideally belongs in a settings.py file"
    ]
   },
@@ -581,7 +580,7 @@
     "# In your settings file\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "engine = create_engine('sqlite:///:memory:', echo=True)\n",
+    "engine = create_engine('sqlite:///sqlalchemy.db', echo=True)\n",
     "\n",
     "\n",
     "# In your models file\n",
