note on while loop variable

--- a/Beginner_3/7. Loops and Iteration.ipynb
+++ b/Beginner_3/7. Loops and Iteration.ipynb
@@ -27,6 +27,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "s you finish coding a while loop, it is good practice to always double-check: Did I make a change to the variables, inside the loop, that will eventually make the loop condition False?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ingredients = [\n",
+    "    'sugar',\n",
+    "    'spice',\n",
+    "    'everything nice',\n",
+    "]\n",
+    "while ingredients:\n",
+    "    pop = ingredients.pop()\n",
+    "    print(pop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 7.2 [For](https://docs.python.org/3.5/tutorial/controlflow.html#for-statements)\n",
     "\n",
     "The `for` statement sequentially iterates over a list, string, set or any iterable."
