edited note on while loop variable

--- a/Beginner_3/7. Loops and Iteration.ipynb
+++ b/Beginner_3/7. Loops and Iteration.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "s you finish coding a while loop, it is good practice to always double-check: Did I make a change to the variables, inside the loop, that will eventually make the loop condition False?"
+    "As you finish coding a while loop, it is good practice to always double-check: Did I make a change to the variables, inside the loop, that will eventually make the loop condition False?"
    ]
   },
   {
